--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <!-- All of the app scripts -->
     <script src="index.js" type="text/javascript"></script>
     <script src="root/root-directive.js" type="text/javascript"></script>
-    <script src="github-service.js" type="text/javascript"></script>
+    <script src="root/github-service.js" type="text/javascript"></script>
     <script src="userInput/userInput-directive.js" type="text/javascript"></script>
     <script src="resultsView/resultsView-directive.js" type="text/javascript"></script>
     <script src="viewPanel/viewPanel-directive.js" type="text/javascript"></script>
