--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,13 @@
     <ex-root></ex-root>
 
     <!-- AngularJS -->
-    <script src="../node_modules/angular/angular.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <!-- All of the app scripts -->
-    <script src="index.js" type="text/javascript"></script>
-    <script src="root/root-directive.js" type="text/javascript"></script>
-    <script src="root/github-service.js" type="text/javascript"></script>
-    <script src="userInput/userInput-directive.js" type="text/javascript"></script>
-    <script src="resultsView/resultsView-directive.js" type="text/javascript"></script>
-    <script src="viewPanel/viewPanel-directive.js" type="text/javascript"></script>
+    <script src="index.js"></script>
+    <script src="root/root-directive.js"></script>
+    <script src="root/github-service.js"></script>
+    <script src="userInput/userInput-directive.js"></script>
+    <script src="resultsView/resultsView-directive.js"></script>
+    <script src="viewPanel/viewPanel-directive.js"></script>
   </body>
 </html>
