--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <!-- Added font awesome for the spinner icon -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <!-- Bundled CSS -->
-    <link rel="stylesheet" type="text/css" href="../dist/index.css">
+    <link rel="stylesheet" type="text/css" href="dist/index.css">
   </head>
   <body ng-app="githubRepos">
 
@@ -21,6 +21,7 @@
 
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
     <!-- All of the app scripts -->
     <script src="index.js"></script>
     <script src="root/root-directive.js"></script>
