tests still passing, added new ex-repositories-list component

--- a/app/resultsView/resultsView.html
+++ b/app/resultsView/resultsView.html
@@ -12,9 +12,5 @@
   <ex-view-panel type="info" title="Oops" description="This user has no repositories."
                  ng-if="ctrl.isNoRepositoriesView(ctrl.view)"></ex-view-panel>
 
-  <ul class="col-md-12 list-group results-view-list" ng-if="ctrl.isRepositoriesView(ctrl.view)">
-    <li class="list-group-item results-view-item" ng-repeat="repo in ctrl.view.repos">
-      <a href="{{repo.href}}">{{repo.name}}</a>
-    </li>
-  </ul>
+  <ex-repositories-list repos="ctrl.view.repos" ng-if="ctrl.isRepositoriesView(ctrl.view)"></ex-repositories-list>
 </div>
