--- a/app/index.html
+++ b/app/index.html
@@ -28,5 +28,6 @@
     <script src="userInput/userInput-directive.js"></script>
     <script src="resultsView/resultsView-directive.js"></script>
     <script src="viewPanel/viewPanel-directive.js"></script>
+    <script src="repositoriesList/repositoriesList-directive.js"></script>
   </body>
 </html>
